Add Thymeleaf support, enhance data models, and implement map controls